Bug 775670 - Build Thunderbird using clang. p=mconley,fallen r=jhopkins